test/1.2/errors/T_EDISCONST.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

method init() {
    /// ERROR EDISCONST
    local char *s1 = "hej";
    local char *s2;
    /// ERROR EDISCONST
    s2 = "hej";
}
